# Evasion-attack

./: .gitignore  README.md  pyproject.toml  start.py  wav.py
attacking_scripts/: attack_script.py
config/: default.yaml
src/demucs_attack/: cli.py
src/demucs_attack/attack/: apply_model_grad.py  attack_script.py  loss.py  optimizer.py
src/demucs_attack/audio/: io.py
src/demucs_attack/defense/: run_defense.py
src/demucs_attack/model/: demucs_model.py
src/demucs_attack/utils/: __init__.py  evaluations.py  visualization.py
utils/: trim_song.py
